<resources>

    <!-- 相关交互的URL -->

    <string name="rabbitmq_host">120.77.222.145</string>
    <string name="rabbitmq_vhost">hx</string>
    <string name="rabbitmq_username">huoyan888</string>
    <string name="rabbitmq_password">huoyan888</string>
    <string name="rabbitmq_queuename_send">HwToServerQ</string>
    <string name="rabbitmq_exchangeName_receive">ServerToAppsE</string>

    <!--相关API-->
    <string name="url_host">http://192.168.1.131:5000/</string>
    <string name="url_api_user_login">api/account/login</string>
    <string name="url_api_user_register">api/account/Register</string>
    <string name="url_api_user_bind_main_device">api/account/BindMainDevice</string>


    <!-- Sys系统级别所用字符串 -->
    <string name="app_name">斑马健康</string>
    <string name="app_version">Version: 1.0.0.1</string>
    <string name="app_company_name">深圳航信德诚科技有限公司</string>


    <!-- 内部存储相关 -->
    <string name="app_store_preferences_name">hx</string>
    <string name="app_store_account_state">app_store_account_state</string>

    <!-- Splash 页面相关资源 -->
    <string name="splash_content">斑马\n健康</string>
    <string name="splash_timeout_second">5</string>

    <!-- Strings related to login & Register-->
    <string name="error_invalid_password">密码格式不正确</string>
    <string name="error_invalid_confirm_password">确认密码与密码不符合</string>
    <string name="error_incorrect_password">用户名和密码不正确</string>
    <string name="error_field_required">必填项</string>
    <string name="error_login_info_required">需要重新登陆</string>

    <string name="permission_rationale">需要权限</string>
    <string name="action_login_short">用户登陆</string>
    <string name="action_register_short">用户注册</string>
    <string name="hint_phone">手机号码</string>
    <string name="hint_email">电子邮箱</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="btn_text_login">登陆</string>
    <string name="btn_text_register">注册</string>
    <string name="info_result_login_success">登陆成功</string>
    <string name="info_result_login_exception">登陆操作异常</string>
    <string name="info_result_register_success">注册成功</string>
    <string name="info_result_register_fail">注册失败，请重试</string>

    <string name="title_activity_register">用户注册</string>


    <!-- fragment_hw_mgr -->
    <string name="fragment_hw_mgr_title">设备管理</string>
    <string name="fragment_hw_mgr_num_info">绑定设备数量：</string>
    <string name="fragment_hw_mgr_btn_add">添加新设备</string>
    <string name="fragment_hw_mgr_list_info">绑定的设备列表：</string>
    <string name="fragment_hw_mgr_dialog_add_hwcode_title">绑定新设备</string>
    <string name="fragment_hw_mgr_dialog_add_hwcode_text_hint">请输入8位硬件编码</string>
    <string name="fragment_hw_mgr_dialog_add_student_text_hint">请输入8位学生学号</string>

    <!-- 心率Fragment -->
    <string name="fragment_heartbeat_mgr_title">心率检查</string>


    <string name="title_activity_container">ContainerActivity</string>


    <string name="fragment_pedometer_mgr_title">计步器</string>

    <!-- 主页面导航 -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="main_option_menu_action_pedometer_settings">计步器设置</string>


    <!--对话框设置-->
    <string name="dialog_pedometer_setting_title">计步器设置</string>
    <string name="dialog_pedometer_setting_switch">计步器开关</string>


    <!-- 设备绑定Fragment -->
    <string name="fragment_deviceind_mgr_title">设备绑定</string>
    <string name="title_activity_main_frame">MainFrameActivity</string>

    <!-- 导航菜单 心率 计步 定位 我的 -->
    <string name="nav_title_heart">心率</string>
    <string name="nav_title_pedometer">计步</string>
    <string name="nav_title_location">定位</string>
    <string name="nav_title_mine">我的</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
